# 6.5840-rustlab

./: README.md
labrpc/: Cargo.toml  README.md
labrpc-macros/: Cargo.toml
labrpc-macros/src/: attr.rs  lib.rs  main.rs  test.rs
labrpc/src/: channel.rs  client.rs  end.rs  err.rs  lib.rs  main.rs  map.rs  msg.rs  network.rs  server.rs  service.rs
macros/: Cargo.toml
macros/src/: attr.rs  lib.rs  main.rs  rpc.rs
raft/: .gitignore  Cargo.toml  README.md  test.sh
raft/src/: candidate.rs  common.rs  event.rs  follower.rs  leader.rs  lib.rs  log.rs  logs.rs  msg.rs  persist.rs  raft.rs  role.rs  service.rs  utils.rs
raft/src/follower/: mod.rs  timer.rs
raft/src/leader/: counter.rs  ldlogs.rs  mod.rs  replicator.rs
raft/src/logs/: applier.rs  logs.rs  mod.rs
raft/src/tests/: mod.rs  test_3a.rs  test_3b.rs  test_3c.rs  test_3d.rs  utils.rs
raft/src/utils/: mod.rs  peer.rs
