[package]
name = "labrpc-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.36"
serde = { version="1.0.203", features=["derive"] }
syn = {version="2.0.66", features = ["full", "extra-traits"]}
async-trait = "0.1.81"
bincode = "1.3.3"

[lib]
proc-macro = true

[dev-dependencies]
