[package]
name = "labrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
auto-from = { git = "https://github.com/xiaoqixian/auto-from.git", version = "0.1.0" }
bincode = "1.3.3"
labrpc-macros = { version = "0.1.0", path = "../labrpc-macros" }
serde = { version = "1.0.208", features = ["default", "derive"] }
tokio = { version = "1.39.2", features = ["default", "sync", "macros", "rt"] }
