[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
labrpc = { version = "0.1.0", path = "../labrpc" }
async-trait = "0.1.81"
bincode = "1.3.3"
macros = { version = "0.1.0", path = "../macros" }
rand = "0.8.5"
serde = { version = "1.0.208", features = ["default", "derive"] }
tokio = { version = "1.39.2", features = ["full"] }
